--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -66,3 +66,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+footer {
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+}
